CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( parser )

FIND_PACKAGE( FLEX REQUIRED )
FIND_PACKAGE( BISON REQUIRED )

UNSET( PARSERS )

# find lexers
FILE( GLOB LEXERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.lex )

FOREACH( LEXER ${LEXERS} ) 

    SET(PFX "uc_")

    FLEX_TARGET( lexers
        ${CMAKE_CURRENT_SOURCE_DIR}/${LEXER} ${CMAKE_CURRENT_BINARY_DIR}/${LEXER}.c 
        COMPILE_FLAGS "-P${PFX} --header-file=${CMAKE_CURRENT_BINARY_DIR}/${LEXER}.h"
        )

    LIST(APPEND PARSERS ${CMAKE_CURRENT_BINARY_DIR}/${LEXER} )
    LIST(APPEND PARSERS ${CMAKE_CURRENT_BINARY_DIR}/${LEXER}.c )

ENDFOREACH()


# find yaccs
FILE( GLOB YACCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.yacc )

FOREACH( YACC ${YACCS} )

    SET(PFX "uc_")

    BISON_TARGET( yaccs
        ${CMAKE_CURRENT_SOURCE_DIR}/${YACC} ${CMAKE_CURRENT_BINARY_DIR}/${YACC}.cpp
        COMPILE_FLAGS "-t -v -d -p${PFX}"
        )
    LIST(APPEND PARSERS ${CMAKE_CURRENT_BINARY_DIR}/${YACC} )
    LIST(APPEND PARSERS ${CMAKE_CURRENT_BINARY_DIR}/${YACC}.cpp )

ENDFOREACH()


ADD_LIBRARY(parsers STATIC
    parser.cpp

    ${PARSERS}
)

TARGET_LINK_LIBRARIES( parsers
    assembler
)

TARGET_INCLUDE_DIRECTORIES( parsers
    INTERFACE PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR}
    INTERFACE PUBLIC
        ../
)
